# chat-app

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-db.sh  jsonnetfile.lock.json  script.sh
.cql/: v001_create_tables.cql
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json  dashboard.jsonnet
src/: consumer.rs  db.rs  handler.rs  main.rs  producer.rs  schema.rs  websocket.rs
templates/: base.html  chat.html  dashboard.html  index.html  login.html
templates/partials/: chat_item.html  message.html
tests/: test-k6.ts  test_chat_flow.hurl  test_endpoint.hurl
