[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.12", features = ["full"] }
uuid = { version = "1.18", features = ["serde"] }
bigdecimal = "0.4"
num-bigint = "0.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
anyhow = "1.0.100"
serde = { version = "1.0.100", features = ["derive"] }
scylla = { version = "1.4.1", features = ["full-serialization", "time-03"] }
axum-anyhow = "0.7.4"
hyper = "1.8.1"
async-trait = "0.1.89"
serde_json = "1.0.145"
tower = "0.5.2"
rdkafka = "0.38.0"

[dev-dependencies]
mockall = "0.13.1"
