[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
axum = { version = "0.8.6", features = ["macros", "ws"] }
tokio = { version = "1.12", features = ["full"] }
uuid = { version = "1.18", features = ["serde", "fast-rng", "v1"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
anyhow = "1.0.100"
serde = { version = "1.0.100", features = ["derive"] }
scylla = { version = "1.4.1", features = ["full-serialization", "time-03"] }
async-trait = "0.1.89"
serde_json = "1.0.145"
rdkafka = "0.38.0"
tera = "1.20.1"
tokio-stream = "0.1.17"
axum-extra = { version = "0.12.2", features = [
  "cookie",
  "form",
  "typed-header",
] }
futures-util = "0.3.31"
[dev-dependencies]
mockall = "0.14.0"
tower = "0.5.2"
